fixed float issue on tablet query, removed float and width on #main-content p

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@ body {
   color: #000;
   font-family: arial;
   background-color: #d7ccc2;
+  position: relative;
 }
 
 #main-container {
@@ -16,7 +17,6 @@ body {
 #main-container main {
   margin: 5% 0;
 }
-
 
 #main-nav a {
   display: block;
@@ -52,10 +52,15 @@ body {
   width: 90%;
   display: block;
   border: 10px solid #323138;
+  margin: 0 auto;
 }
 
 footer {
+  width: 100%;
   background-color: #B5B4B3;
+  position: absolute;
+  bottom: -50px;
+  left: 0;
 }
 
 @media (min-width: 700px) {
@@ -83,24 +88,26 @@ footer {
   }
 
   #main-container main {
-    font-size: 1.3em;
+    font-size: 1.1em;
   }
 
   #main-container main::after,
   #main-content::after {
-      clear: both;
-      content: ".";
-      display: block;
-      height: 0;
-      overflow: hidden;
+    clear: both;
+    content: ".";
+    display: block;
+    height: 0;
+    overflow: hidden;
   }
 
   #main-content p {
-    width: 40%;
-    float: left;
     padding-left: 4%;
     padding-right: 2%;
     line-height: 40px;
+  }
+
+  #main-content img {
+    width: 75%;
   }
 
   footer::after {
@@ -122,6 +129,7 @@ footer {
   #main-container article #main-title {
     width: 20%;
     float: left;
+    text-align: left;
   }
 
   #main-content {
